# ChessBoardGame

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json  FIXES_SUMMARY.md  main.cpp
devlog/: 2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-20.md  2026-06-21.md  2026-06-22.md
docs/: design-spec.md  implementation-steps.md  requirements.md  technical-spec.md  游戏课程设计报告.docx  游戏课程设计报告.md  游戏课程设计报告模版.doc
include/: AIPlayer.h  Card.h  Chessboard.h  DeckManager.h  GameEngine.h
saves/: 20260604_123721_OTHER_Finished.txt  20260609_095047_OTHER_Finished.txt  20260609_100936_OTHER_Finished.txt  20260609_115259_OTHER_Finished.txt  20260609_185934_OTHER_Finished.txt  20260610_114033_OTHER_Finished.txt  20260610_114737_OTHER_Finished.txt
src/: AIPlayer.cpp  Chessboard.cpp  DeckManager.cpp  GameEngine.cpp
